# espiral

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
docs/: render_pipeline.md
examples/: helloworld.cpp  main.cpp  sdlwrapper.cpp
include/epr/: espiral.hpp
include/epr/core/: core.hpp
include/epr/core/math/: math.hpp
include/epr/core/math/matrix/: matrix3.hpp
include/epr/core/math/vector/: vector2.hpp  vector3.hpp
include/epr/core/spatial/: camera.hpp  ray.hpp  spatial.hpp
include/epr/core/spatial/rotation/: rotation3.hpp
include/epr/core/spatial/transform/: transform3.hpp
include/epr/core/system/: system.hpp
include/epr/core/system/io/: file_loader.hpp  input.hpp
include/epr/geometry/: geometry.hpp  meshgenerator.hpp  vertex.hpp
include/epr/geometry/triangle/: localtriangle.hpp  triangle.hpp
include/epr/graphics/: display.hpp  graphics.hpp  imageloader.hpp  rgba.hpp  texture.hpp  viewport.hpp
include/epr/graphics/core/: rgba.hpp  viewport.hpp
include/epr/graphics/driver/: cli_display.hpp  sdl_wrapper.hpp
include/epr/graphics/render/: render.hpp  zbuffer.hpp
include/epr/input/: input.hpp
include/epr/logic/: logic.hpp
include/epr/logic/motion/: move.hpp
include/epr/math/: math.hpp
include/epr/math/matrix/: matrix3.hpp
include/epr/math/vector/: vector2.hpp  vector3.hpp
include/epr/render/: render.hpp  scanlines.hpp  zbuffer.hpp
include/epr/scene/: node.hpp  scene.hpp
include/epr/spatial/: camera.hpp  ray.hpp  spatial.hpp
include/epr/spatial/rotation/: rotation3.hpp
include/epr/spatial/transform/: transform3.hpp
include/epr/world/: world.hpp
include/epr/world/geometry/: geometry.hpp
include/epr/world/geometry/core/: vertex.hpp
include/epr/world/geometry/mesh/: mesh_generator.hpp
include/epr/world/geometry/triangle/: local_triangle.hpp  triangle.hpp
include/epr/world/scene/: node.hpp  scene.hpp
src/graphics/: display.cpp  texture.cpp
src/render/: process_mesh.cpp  process_rasterize.cpp  process_scanlines.cpp  process_view.cpp
src/spatial/rotation/: rotation3.cpp
utils/: imageconversor.py  imageloader.py  whysoserios.txt
utils/images/: whysoserios.txt
